@@ -1,5 +1,10 @@
 2012-04-07  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/io/lzopio.c (read_block_header): Fix incorrect byte swapping
+	(test_header): Likewise.
+
+2012-04-07  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	Fix --help formatting.
 
 	* util/grub-mkconfig_lib.in (print_option_help): New function.
